--- a/rapport_MARIAC_DUIGOU.tex
+++ b/rapport_MARIAC_DUIGOU.tex
@@ -33,6 +33,10 @@ l’aide de la théorie des valeurs extrêmes étudiée en cours.
 \\
 \\
 Les données utilisées pour ce projet recensent les hauteurs de vagues de 20 stations différentes de 1961 à 2012 à un rythme de 1 observation par heure.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/stations.png}
+\end{figure}
 \\
 \\
 Nous allons dans une première partie modéliser les hauteurs de vagues extrêmes de la station 6 à l’aide d’une approche univariée. Puis dans une deuxième partie
